tests/ir/valid/borrows.vit
space tests/ir/valid/borrows

proc keep(value: &int) -> int {
  give *value;
}

proc main() -> int {
  let x: int = 4;
  give keep(&x);
}
