tests/ir/invalid/bad_borrow.vit
space tests/ir/invalid/bad_borrow

proc main() -> int {
  let x: int = 1;
  let y: &mut int = &x;
  give *y;
}
